tests/test11_syntax_error.expected
Syntax error: line 6: expected ';', got 'return'
